Closed Bug 177753 Opened 22 years ago Closed 22 years ago

Tree painting methods don't have to be virtual

Categories

(Core :: XUL, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: janv, Assigned: janv)

Details

Attachments

(1 file)

All tree painting methods PaintColumn(), PaintRow(), etc. are now declared as NS_IMETHOD, so they are virtual. I don't think they have to be (except main Paint method) Noone inherits from nsTreeBodyFrame. Patch coming...
Attached patch patchSplinter Review
bryner, jag could you r/sr ?
Comment on attachment 104770 [details] [diff] [review] patch sr=jag
Attachment #104770 - Flags: superreview+
Comment on attachment 104770 [details] [diff] [review] patch r=bryner
Attachment #104770 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: