Fix for bug 177753. Tree painting methods don't have to be virtual r=bryner, sr=jag